Fixed search box z-index for wide screens.

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,3 @@
-
-
 .container { margin-top: 20%; }
 
 .orange { color: #F7A900; }
@@ -30,10 +28,17 @@
 
 .credits a:hover { text-decoration: none; }
 
-#searchbox{ float: left; white-space: nowrap; }
+#searchbox{ 
+    float: left; 
+    white-space: nowrap;
+}
+
+#searchdiv {
+    position: relative;
+    z-index: 2000;
+}
 
 .navbar p { padding-top: 5px;}
-
 
 .navbar-inner {
   background-color: #686868;
